<resources>
    <string name="app_name">SUITCASE</string>
    <string name="price">0</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="choose">Choose</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="image_path">Image Path</string>
    <string name="product_name">Product-Name</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="purchased">Purchased</string>
    <string name="product_description">What is this productModel?</string>
    <string name="purchase_status">Not Purchased</string>
    <string name="share">Share</string>
    <string name="image">Product</string>
    <string name="price_hint">Price</string>
</resources>