<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_20sdp"

    android:background="@drawable/custom_edittext"

    android:orientation="vertical">

    <ImageView

        android:id="@+id/ivProductImage"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="213dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/product_name"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivProductImage"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvProductDescription"
        android:layout_width="213dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/product_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivProductImage"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="bottom|end"
        android:text="@string/price"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toEndOf="@+id/tvProductDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/tvPurchased"
        android:layout_width="110dp"
        android:layout_height="21dp"
        android:gravity="start"
        android:text="@string/purchase_status"
        android:textColor="#4f46e5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toEndOf="@+id/ivProductImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <ImageView
        android:id="@+id/ivShare"
        android:layout_width="50dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/share"
        app:layout_constraintBottom_toTopOf="@+id/tvProductPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/tvProductName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/share" />

</androidx.constraintlayout.widget.ConstraintLayout>